Renamed text fields and added label strings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">SignUpForm</string>
     <string name="name_prompt">Name:</string>
     <string name="email_prompt">Email:</string>
+    <string name="password_prompt">Password:</string>
+    <string name="confirmation_prompt">Confirm Password:</string>
 </resources>
