--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="email_prompt">Email:</string>
     <string name="password_prompt">Password:</string>
     <string name="confirmation_prompt">Confirm Password:</string>
+    <string name="button_label">Save</string>
 </resources>
